# me134

cardibeasts/hw5code/: CMakeLists.txt  package.xml
cardibeasts/hw5code/launch/: viewurdf.launch
cardibeasts/hw5code/src/: fkinnode.cpp
cardibeasts/hw5code/urdf/: robot.urdf  robotplain.urdf
cardibeasts/single/: CMakeLists.txt
cardibeasts/single/scripts/: #pyfindface.py#  chess.py  detectmarkers.py  pyfindactuators.py  pyfindface.py~  pyimage  pyimage.py  pymakemsg.py  pymapping.py  pymovetoimplicit.py  pymovetoimplicitgoal.py  pymovetoimplicitx.py~  pymovetoimplicity.py  pytriangle.py  pyvariablespeed.py  triangle.py
cardibeasts/single/src/: whereisrobot.cpp
cardibeasts/single/tunecode/: CMakeLists.txt  package.xml
cardibeasts/single/tunecode/launch/: tune.launch
cardibeasts/single/tunecode/matlab/: plotjoints.m
cardibeasts/single/tunecode/rviz/: view2robot.rviz
cardibeasts/single/tunecode/scripts/: config.py  float.py  lock.py  triangle.py  watch.py
cardibeasts/single/tunecode/srv/: MoveTo.srv
cardibeasts/single/tunecode/urdf/: robot.urdf
single/: CMakeLists.txt~  package.xml  package.xml~
single/scripts/: #pymovetoexplicit.py#  pydefinerobot.py  pyfindface.py  pyfloatcardi.py  pymovecardi3.py  pymovetoexplicit.py  pymovetoexplicit.py~  pymovetoimplicitx.py~  pypickup.py  pysendcommands.py  pywhereisrobot.py  tricardi.py
single/src/: definerobot.cpp  movetoexplicit.cpp  movetoimplicit.cpp  sendcommands.cpp  variablespeed.cpp
single/tunecode/launch/: simulaterobot.launch  test2robot.launch  testfkin.launch  view2robot.launch  viewrobot.launch
single/tunecode/matlab/: joint_state_data.m
single/tunecode/scripts/: gravity.py  robotutils.py  start.py  tune.py
single/tunecode/srv/: TuneCfg.srv
single/tunecode/urdf/: robotplain.urdf
